Phase 0: swap ModDevGradle for architectury-loom
Implements Phase 0 of docs/multi-loader-expansion.md: change only the
build system (all 294 source files stay in neoforge/), so the "did the
build swap break it" question stays separate from Phase 1's split.

- settings.gradle: four-repo pluginManagement, include only 'neoforge'
  for now (common/forge come back in Phases 1/3)
- root build.gradle: dev.architectury.loom + architectury-plugin +
  shadow (unused until Phase 1), subprojects block wiring loom,
  mappings, Java 21 toolchain, JEI repos, jar manifest
- gradle.properties: rewritten to the 26.1.2/apt-ores key set, Parchment
  and configuration-cache dropped, neoforge_version bumped to 21.1.209
- neoforge/build.gradle: rewritten around architectury { neoForge() },
  loom.runs for client/server/data/gametest, JEI deps, refmap name
  reconciled with potionsplus.mixins.json ("potionsplus-refmap.json")
- Gradle wrapper bumped to 9.5.0

Root cause of a real multi-hour blocker (full account in the plan
doc's progress log): the old moddev-era settings.gradle carried a
`foojay-resolver-convention` plugin forward that apt-ores (the working
1.21.1 reference build) never had. Its presence made every fresh
project-configuration hit an IllegalAccessException deep in Loom's
Gson-based Mojang-manifest parsing; removing it fixed the build
outright. Also added gradle/gradle-daemon-jvm.properties
(toolchainVersion=21) as the durable per-project JDK pin — the
machine's global ~/.gradle/gradle.properties pins org.gradle.java.home
to a JDK 25 install for the MC 26+ branches, and a project-level
gradle.properties override does not take effect (daemon JVM selection
happens before project properties are read).

Also fixes a regression in this session's own earlier atlas fix:
scoping blocks.json's mob_effect/ source down to only potionsplus:
textures broke potion_effect_icon, which needs every vanilla effect's
icon too. mob_effect/ stays a namespace-wide directory source; only
particle/